--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 *{
-	padding: 0;
+	padding: 0em;
 	margin: 0;
 }
 body{
-	background-color: red;
+	background-color: yellow;
 }
 .contenedor{
 	width: 80%;
